--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
